# pretix-servicefees

./: .gitlab-ci.yml  .update-locales  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.py
pretix_servicefees/: __init__.py  apps.py  models.py  signals.py  urls.py  views.py
pretix_servicefees/locale/: django.pot
pretix_servicefees/locale/af/LC_MESSAGES/: django.po
pretix_servicefees/locale/ar/LC_MESSAGES/: django.po
pretix_servicefees/locale/ca/LC_MESSAGES/: django.po
pretix_servicefees/locale/cs/LC_MESSAGES/: django.po
pretix_servicefees/locale/da/LC_MESSAGES/: django.po
pretix_servicefees/locale/de/LC_MESSAGES/: django.po
pretix_servicefees/locale/de_Informal/LC_MESSAGES/: django.po
pretix_servicefees/locale/el/LC_MESSAGES/: django.po
pretix_servicefees/locale/es/LC_MESSAGES/: django.po
pretix_servicefees/locale/fi/LC_MESSAGES/: django.po
pretix_servicefees/locale/fr/LC_MESSAGES/: django.po
pretix_servicefees/locale/gl/LC_MESSAGES/: django.po
pretix_servicefees/locale/hr/LC_MESSAGES/: django.po
pretix_servicefees/locale/it/LC_MESSAGES/: django.po
pretix_servicefees/locale/ja/LC_MESSAGES/: django.po
pretix_servicefees/locale/lb/LC_MESSAGES/: django.po
pretix_servicefees/locale/lv/LC_MESSAGES/: django.po
pretix_servicefees/locale/nl/LC_MESSAGES/: django.po
pretix_servicefees/locale/nl_BE/LC_MESSAGES/: django.po
pretix_servicefees/locale/pl/LC_MESSAGES/: django.po
pretix_servicefees/migrations/: 0001_initial.py  0002_tax_default.py
pretix_servicefees/templates/pretix_servicefees/: settings.html
(+13 files in other folders)
